# prebuilder

./: .gitmodules  CMakeLists.txt  GITHUB_ACTIONS_PREBUILD_CONFIG  GITHUB_ACTIONS_PREBUILD_SSH_KEY  GITHUB_ACTIONS_PREBUILD_SSH_KEY.pub  README.md  main.cpp  split_files.sh  split_files_linux.sh  split_files_macOS.sh  unsplit_files.sh  unsplit_files_macOS.sh
.github/workflows/: cmake.yml  prebuilder.yml
GITHUB_ACTIONS_PREBUILD_OUT_FOLDER/: macOS-latest  windows-latest
GITHUB_ACTIONS_PREBUILD_OUT_FOLDER/macOS-latest/: libmain.dylib  libmain.dylib.SPLIT_FILEaa  libmain.dylib.SPLIT_FILEab  libmain.dylib.SPLIT_FILEam  libmain.dylib.SPLIT_FILEao  libmain.dylib.SPLIT_FILEbg  libmain.dylib.SPLIT_FILEbw  libmain.dylib.SPLIT_FILEbx  libmain.dylib.SPLIT_FILEby  libmain.dylib.SPLIT_FILEbz  libmain.dylib.SPLIT_FILEca  libmain.dylib.SPLIT_FILEcb  libmain.dylib.SPLIT_FILEcc  libmain.dylib.SPLIT_FILEcd  libmain.dylib.SPLIT_FILEce  libmain.dylib.SPLIT_FILEcf  libmain.dylib.SPLIT_FILEcg  libmain.dylib.SPLIT_FILEch  libmain.dylib.SPLIT_FILEci  libmain.dylib.SPLIT_MARKER_NAME  mainExecutable.dylib  mainExecutable.dylib.SPLIT_FILEaa  mainExecutable.dylib.SPLIT_FILEab  mainExecutable.dylib.SPLIT_FILEan  mainExecutable.dylib.SPLIT_FILEap  mainExecutable.dylib.SPLIT_FILEbg  mainExecutable.dylib.SPLIT_FILEbw  mainExecutable.dylib.SPLIT_FILEbx  mainExecutable.dylib.SPLIT_FILEby  mainExecutable.dylib.SPLIT_FILEbz  mainExecutable.dylib.SPLIT_FILEca  mainExecutable.dylib.SPLIT_FILEcb  mainExecutable.dylib.SPLIT_FILEcc  mainExecutable.dylib.SPLIT_FILEcd  mainExecutable.dylib.SPLIT_FILEce  (+5 more)
(+160 files in other folders)
